log
Thu 16 May 2024 02:26:17 AM UTC: 
 tests:  0|5
total_score: 0/70
396f65c
Thu 16 May 2024 03:42:06 AM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 5/70
1ac160e
Thu 16 May 2024 03:44:30 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
368c548
Thu 16 May 2024 04:26:05 AM UTC: 
 sudoku.c | 57 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 57 insertions(+)
 tests:  2|4
total_score: 15/70
a78e738
Thu 16 May 2024 04:27:04 AM UTC: 
 sudoku.c | 20 --------------------
 1 file changed, 20 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:8: error: unused variable ‘numSM’ [-Werror=unused-variable]
   49 |    int numSM[10] = {0};
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
36ac703
Thu 16 May 2024 04:27:15 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a2a1738
Thu 16 May 2024 04:29:47 AM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ac235f4
Thu 16 May 2024 04:50:16 AM UTC: 
 sudoku.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:8: error: unused variable ‘numC’ [-Werror=unused-variable]
   48 |    int numC[10] = {0};
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d626e8
Thu 16 May 2024 04:50:32 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ecfd8b8
Thu 16 May 2024 04:59:45 AM UTC: 
 sudoku.c | 34 +++++++++++++++++-----------------
 1 file changed, 17 insertions(+), 17 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:8: error: unused variable ‘numC’ [-Werror=unused-variable]
   48 |    int numC[10] = {0};
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
2f3ed39
Thu 16 May 2024 05:01:09 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
0f3de41
Thu 16 May 2024 05:02:18 AM UTC: 
 sudoku.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 61 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
bc17a40
Thu 16 May 2024 05:13:53 AM UTC: 
 sudoku.c | 64 +++++-----------------------------------------------------------
 1 file changed, 5 insertions(+), 59 deletions(-)
 tests:  2|4
total_score: 15/70
d03f3d2
Thu 16 May 2024 05:14:26 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:8: error: unused variable ‘numC’ [-Werror=unused-variable]
   48 |    int numC[10] = {0};
      |        ^~~~
sudoku.c:47:8: error: unused variable ‘numF’ [-Werror=unused-variable]
   47 |    int numF[10] = {0};
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
c1da326
Thu 16 May 2024 05:14:40 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ab76071
Thu 16 May 2024 05:19:16 AM UTC: 
 sudoku.c | 61 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 58 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
3b90e51
Thu 16 May 2024 05:36:31 AM UTC: 
 sudoku.c | 79 +++++++++++++++++++++++++++++++++++-----------------------------
 1 file changed, 43 insertions(+), 36 deletions(-)
 tests:  2|4
total_score: 15/70
b2cb3f4
Thu 16 May 2024 05:37:34 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
dee764e
Thu 16 May 2024 05:37:59 AM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
2b71e4e
Thu 16 May 2024 05:40:09 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f5695f1
Thu 16 May 2024 05:42:37 AM UTC: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  2|4
total_score: 15/70
5151e19
Thu 16 May 2024 05:43:01 AM UTC: 
 sudoku.c | 72 +---------------------------------------------------------------
 1 file changed, 1 insertion(+), 71 deletions(-)
 tests:  2|4
total_score: 15/70
11f8420
Thu 16 May 2024 05:44:59 AM UTC: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
b6bbc15
Thu 16 May 2024 05:47:58 AM UTC: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
924f3ab
Thu 16 May 2024 05:53:35 AM UTC: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:67:11: error: ‘j’ undeclared (first use in this function)
   67 |       for(j = 0; j < 9; j++)
      |           ^
sudoku.c:67:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:66:11: error: variable ‘numC’ set but not used [-Werror=unused-but-set-variable]
   66 |       int numC[10] = {0};
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
78bc5ca
Thu 16 May 2024 05:53:50 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
635e7ae
Thu 16 May 2024 06:02:23 AM UTC: 
 sudoku.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
 tests:  2|4
total_score: 15/70
e31d482
Thu 16 May 2024 06:07:42 AM UTC: 
 sudoku.c | 70 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 69 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
42cfebe
Thu 16 May 2024 06:15:13 AM UTC: 
 sudoku.c | 79 +++++++++++++++++++++++++++++++++++-----------------------------
 1 file changed, 43 insertions(+), 36 deletions(-)
 tests:  2|4
total_score: 15/70
7f74003
Thu 16 May 2024 06:17:05 AM UTC: 
 sudoku.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
ea30b8b
Thu 16 May 2024 06:18:51 AM UTC: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
bb4c00e
Thu 16 May 2024 06:22:27 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6601cd7
Thu 16 May 2024 06:25:39 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
3a958fe
Thu 16 May 2024 06:26:31 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
a63c4fc
Thu 16 May 2024 06:27:51 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:69:23: error: ‘sudoku’ undeclared (first use in this function)
   69 |             int num = sudoku[fila][col];
      |                       ^~~~~~
sudoku.c:69:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ce96d60
